[package]
name = "simple_injector"
version = "0.1.2"
authors = ["Sebastian"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memory-rs = "0.2.5"
windows-sys = { version = "0.35", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }
